<resources>

    <string name="app_name">BlunoBasicDemo</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="action_settings">Action settings</string>

    <!-- GraphView and Data Displaying -->
    <string name="string_end">End</string>
    <string name="temperature">temperature</string>
    <string name="ph">pH</string>
    <string name="turbidity">Turbidity</string>
    <string name="average_temperature">Average Temperature:</string>
    <string name="average_turbidity">Average Turbidity:</string>
    <string name="average_ph">Average pH:</string>
    <string name="temp">Temperature</string>
    <string name="default_connection_state">Unknown</string>

    <string name="new_survey">New</string>
    <string name="degreesF" translatable="false">°F</string>
    <string name="ntu">NTU</string>
</resources>
