<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="183dp"
        tools:layout_editor_absoluteY="34dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tempLabel"
                    android:layout_width="142dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="304dp"
                    android:text="@string/average_temperature"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    card_view:layout_constraintHorizontal_bias="0.0"
                    card_view:layout_constraintStart_toStartOf="parent"
                    card_view:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/avgTemp"
                    android:layout_width="142dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="200dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="304dp"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    card_view:layout_constraintHorizontal_bias="0.0"
                    card_view:layout_constraintStart_toStartOf="parent"
                    card_view:layout_constraintTop_toTopOf="parent"
                    card_view:layout_constraintVertical_bias="0.0" />
            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/phLabel"
                    android:layout_width="136dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="304dp"
                    android:text="@string/average_ph"
                    card_view:layout_constraintBottom_toBottomOf="parent"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    card_view:layout_constraintHorizontal_bias="0.0"
                    card_view:layout_constraintStart_toStartOf="parent"
                    card_view:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/avgPh"
                    android:layout_width="136dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="200dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="304dp"
                    card_view:layout_constraintBottom_toBottomOf="parent"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    card_view:layout_constraintHorizontal_bias="0.0"
                    card_view:layout_constraintStart_toStartOf="parent"
                    card_view:layout_constraintTop_toTopOf="parent" />

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/turbLabel"
                    android:layout_width="146dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="304dp"
                    android:text="@string/average_turbidity"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    card_view:layout_constraintHorizontal_bias="0.0"
                    card_view:layout_constraintStart_toStartOf="parent"
                    card_view:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/avgturb"
                    android:layout_width="146dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="200dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="304dp"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    card_view:layout_constraintHorizontal_bias="0.0"
                    card_view:layout_constraintStart_toStartOf="parent"
                    card_view:layout_constraintTop_toTopOf="parent" />
            </android.support.constraint.ConstraintLayout>

            <android.support.v7.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="350dp"
                android:layout_height="175dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="32dp"
                card_view:cardBackgroundColor="@android:color/white"
                card_view:cardElevation="2sp"
                card_view:cardUseCompatPadding="true"
                card_view:layout_constraintBottom_toTopOf="@+id/cardView2"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintHorizontal_bias="0.5"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent">

                <RelativeLayout
                    android:layout_width="315dp"
                    android:layout_height="150dp"
                    android:layout_margin="16dp">

                    <com.jjoe64.graphview.GraphView
                        android:id="@+id/graph"
                        android:layout_width="315dp"
                        android:layout_height="125dp"
                        android:layout_marginLeft="0dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginRight="0dp"
                        android:layout_marginBottom="0dp" />

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/graph"
                        android:layout_marginTop="3dp"
                        android:maxLines="3"
                        android:text="@string/temp"
                        android:textColor="#222"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="350dp"
                android:layout_height="175dp"
                android:layout_marginBottom="32dp"
                card_view:cardBackgroundColor="@android:color/white"
                card_view:cardElevation="2sp"
                card_view:cardUseCompatPadding="true"
                card_view:layout_constraintBottom_toTopOf="@+id/cardView3"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintHorizontal_bias="0.5"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/cardView">

                <RelativeLayout
                    android:layout_width="315dp"
                    android:layout_height="150dp"
                    android:layout_margin="16dp">

                    <com.jjoe64.graphview.GraphView
                        android:id="@+id/graph2"
                        android:layout_width="315dp"
                        android:layout_height="125dp"
                        android:layout_marginLeft="0dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginRight="0dp"
                        android:layout_marginBottom="0dp" />

                    <TextView
                        android:id="@+id/title2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/graph2"
                        android:layout_marginTop="3dp"
                        android:maxLines="3"
                        android:text="@string/ph"
                        android:textColor="#222"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardView3"

                android:layout_width="348dp"
                android:layout_height="175dp"
                card_view:cardBackgroundColor="@android:color/white"
                card_view:cardElevation="2sp"
                card_view:cardUseCompatPadding="true"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintHorizontal_bias="0.5"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/cardView2">

                <RelativeLayout
                    android:layout_width="315dp"
                    android:layout_height="150dp"
                    android:layout_margin="16dp">

                    <com.jjoe64.graphview.GraphView
                        android:id="@+id/graph3"
                        android:layout_width="315dp"
                        android:layout_height="125dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginLeft="0dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginRight="0dp"
                        android:layout_marginBottom="0dp" />

                    <TextView
                        android:id="@+id/title3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/graph3"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_marginTop="3dp"
                        android:maxLines="3"
                        android:text="@string/turbidity"
                        android:textColor="#222"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>


    <!--  <android.support.v7.widget.CardView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/cardAddSeriesAtRuntime"
          card_view:cardBackgroundColor="@android:color/white"
          card_view:cardElevation="2sp"
          card_view:cardUseCompatPadding="true">

          <RelativeLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_margin="16dp">

              <ImageView
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:id="@+id/graph3"
                  android:src="@drawable/preview"/>

              <TextView
                  android:id="@+id/title3"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_below="@+id/graph3"
                  android:layout_marginTop="8dp"
                  android:layout_toLeftOf="@+id/imgSource3"
                  android:maxLines="3"
                  android:text="Realtime scrolling 3"
                  android:textColor="#222"
                  android:textSize="22dp"
                  android:textStyle="bold" />

              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_below="@+id/title3"
                  android:maxLines="3"
                  android:text="remove and add series at runtime"
                  android:textColor="#666"
                  android:textSize="14dp" />

              <ImageView
                  android:layout_width="40dp"
                  android:layout_height="40dp"
                  android:src="@drawable/fullscreen"
                  android:id="@+id/imgFullscreen3"
                  android:layout_margin="5dp"
                  android:layout_alignParentRight="true"
                  android:layout_alignTop="@id/title3"/>

              <ImageView
                  android:layout_width="40dp"
                  android:layout_height="40dp"
                  android:src="@drawable/source"
                  android:id="@id/imgSource3"
                  android:layout_margin="5dp"
                  android:layout_toLeftOf="@id/imgFullscreen3"
                  android:layout_alignTop="@id/title3"/>

          </RelativeLayout>

      </android.support.v7.widget.CardView>-->

</android.support.constraint.ConstraintLayout>