<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/currTemp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginBottom="24dp"
        android:textSize="24sp"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintStart_toEndOf="@+id/cardView"
        card_view:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_angle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/joystickView"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="24dp"
        android:text="0°"
        android:textSize="20sp"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toTopOf="@+id/joystickView" />

    <TextView
        android:id="@+id/textView_coordinate2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_angle2"
        android:layout_alignParentEnd="true"
        android:text="x050:y050"
        android:textSize="20sp"
        android:visibility="invisible"
        card_view:layout_constraintStart_toStartOf="@+id/textView_angle2"
        card_view:layout_constraintTop_toBottomOf="@+id/textView_strength2" />

    <TextView
        android:id="@+id/textView_strength2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_coordinate2"
        android:layout_alignParentEnd="true"
        android:text="0%"
        android:textSize="20sp"
        card_view:layout_constraintStart_toStartOf="@+id/textView_angle2"
        card_view:layout_constraintTop_toBottomOf="@+id/textView_angle2" />

    <TextView
        android:id="@+id/textView_motorValues2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/joystickView"
        android:text="L 000: R 000"
        android:textSize="20sp"
        card_view:layout_constraintBottom_toBottomOf="@+id/joystickView"
        card_view:layout_constraintStart_toStartOf="@+id/textView_angle2" />

    <Button
        android:id="@+id/button"
        android:layout_width="65dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:baselineAligned="false"
        android:onClick="sendMessage"
        android:text="@string/string_end"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintTop_toTopOf="parent" />

    <com.dfrobot.angelo.blunobasicdemo.JoystickView
        android:id="@+id/joystickView"
        android:layout_width="241dp"
        android:layout_height="259dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center_horizontal"
        card_view:JV_backgroundColor="#091963"
        card_view:JV_borderColor="#39B6FF"
        card_view:JV_borderWidth="4dp"
        card_view:JV_buttonColor="#39B6FF"
        card_view:JV_buttonSizeRatio="15%"
        card_view:JV_fixedCenter="false"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="4dp"
        card_view:cardBackgroundColor="@android:color/white"
        card_view:cardElevation="2sp"
        card_view:cardUseCompatPadding="true"
        card_view:layout_constraintBottom_toTopOf="@+id/cardView2"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toBottomOf="@+id/joystickView">

        <RelativeLayout
            android:layout_width="178dp"
            android:layout_height="wrap_content">

            <com.jjoe64.graphview.GraphView
                android:id="@+id/graph"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="0dp" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/graph"
                android:layout_marginTop="3dp"
                android:maxLines="3"
                android:text="@string/temperature"
                android:textColor="#222"
                android:textSize="12sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        card_view:cardBackgroundColor="@android:color/white"
        card_view:cardElevation="2sp"
        card_view:cardUseCompatPadding="true"
        card_view:layout_constraintBottom_toTopOf="@+id/cardView3"
        card_view:layout_constraintStart_toStartOf="@+id/cardView"
        card_view:layout_constraintTop_toBottomOf="@+id/cardView">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.jjoe64.graphview.GraphView
                android:id="@+id/graph2"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="0dp" />

            <TextView
                android:id="@+id/title2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/graph2"
                android:layout_marginTop="3dp"
                android:maxLines="3"
                android:text="@string/ph"
                android:textColor="#222"
                android:textSize="12sp"
                android:textStyle="bold" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardView3"

        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        card_view:cardBackgroundColor="@android:color/white"
        card_view:cardElevation="2sp"
        card_view:cardUseCompatPadding="true"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintStart_toStartOf="@+id/cardView"
        card_view:layout_constraintTop_toBottomOf="@+id/cardView2">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.jjoe64.graphview.GraphView
                android:id="@+id/graph3"
                android:layout_width="185dp"
                android:layout_height="80dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="0dp" />

            <TextView
                android:id="@+id/title3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/graph3"
                android:layout_alignParentStart="true"
                android:layout_marginTop="3dp"
                android:maxLines="3"
                android:text="@string/turbidity"
                android:textColor="#222"
                android:textSize="12sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/connectionState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_connection_state"
        card_view:layout_constraintStart_toStartOf="@+id/textView_angle2"
        card_view:layout_constraintTop_toTopOf="@+id/button" />

    <TextView
        android:id="@+id/currTurb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="236dp"
        android:layout_marginBottom="68dp"
        android:textSize="24sp"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintStart_toEndOf="@+id/cardView"
        card_view:layout_constraintTop_toBottomOf="@+id/currTemp" />

    <TextView
        android:id="@+id/currpH"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="226dp"
        android:layout_marginBottom="221dp"
        android:textSize="24sp"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintStart_toEndOf="@+id/cardView2"
        card_view:layout_constraintTop_toBottomOf="@+id/joystickView" />

    <!--  <android.support.v7.widget.CardView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/cardAddSeriesAtRuntime"
          card_view:cardBackgroundColor="@android:color/white"
          card_view:cardElevation="2sp"
          card_view:cardUseCompatPadding="true">

          <RelativeLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_margin="16dp">

              <ImageView
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:id="@+id/graph3"
                  android:src="@drawable/preview"/>

              <TextView
                  android:id="@+id/title3"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_below="@+id/graph3"
                  android:layout_marginTop="8dp"
                  android:layout_toLeftOf="@+id/imgSource3"
                  android:maxLines="3"
                  android:text="Realtime scrolling 3"
                  android:textColor="#222"
                  android:textSize="22dp"
                  android:textStyle="bold" />

              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_below="@+id/title3"
                  android:maxLines="3"
                  android:text="remove and add series at runtime"
                  android:textColor="#666"
                  android:textSize="14dp" />

              <ImageView
                  android:layout_width="40dp"
                  android:layout_height="40dp"
                  android:src="@drawable/fullscreen"
                  android:id="@+id/imgFullscreen3"
                  android:layout_margin="5dp"
                  android:layout_alignParentRight="true"
                  android:layout_alignTop="@id/title3"/>

              <ImageView
                  android:layout_width="40dp"
                  android:layout_height="40dp"
                  android:src="@drawable/source"
                  android:id="@id/imgSource3"
                  android:layout_margin="5dp"
                  android:layout_toLeftOf="@id/imgFullscreen3"
                  android:layout_alignTop="@id/title3"/>

          </RelativeLayout>

      </android.support.v7.widget.CardView>-->

</android.support.constraint.ConstraintLayout>